--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
     <link rel="apple-touch-icon" href="logo192.png" />  
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link
     href="https://fonts.googleapis.com/css?family=Domine|Abril+Fatface|Arya|Tenor+Sans|Tangerine|Bellota|Oswald|Permanent+Marker&display=swap"
      rel="stylesheet">
+     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>kadir umac</title>
   </head>
   <body>
